--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ ul
 
 body
 {
-    font-family: "Lexend Deca", sans-serif;
+    font-family: "Inter", sans-serif;
     background-color: var(--very-dark-blue);
 }
 
@@ -48,6 +48,8 @@ p
     margin: 50px 20px;
     padding: 0 0px 20px;
     border-radius: 10px;
+    color: var(--white);
+    text-align: center;
 }
 
 .picture
@@ -64,12 +66,106 @@ p
     border-radius: 10px 10px 0 0;
 }
 
+.container .card h1
+{
+    margin: 30px 0 20px;
+    padding: 0 20px;
+    line-height: 1.3;
+    font-family: "Lexend Deca", sans-serif;
+}
+
+.container .card p 
+{
+    padding: 0 20px;
+    margin-bottom: 30px;
+}
+
+.container .card h1 span 
+{
+    color: hsl(277, 64%, 61%);
+}
+
+.container .card ul li
+{
+    margin-right: 20px;
+    text-transform: uppercase;
+    font-family: "Inter", sans-serif;
+    font-size: 13px;
+}
+
+.container .card ul li span
+{
+    display: block;
+    margin-bottom: 10px;
+    text-transform: lowercase;
+    font-weight: 700;
+    font-family: "Lexend Deca", sans-serif;
+    font-size: 18px;
+}
+
 .attribution 
 { 
-    font-size: 11px; text-align: center; 
+    font-size: 11px; 
+    text-align: center; 
+    color: var(--white);
+    padding-bottom: 20px;
 }
 
 .attribution a 
 { 
     color: hsl(228, 45%, 44%); 
+}
+
+/****************************
+    RESPONSIVE
+*******************************/
+@media (min-width: 768px) {
+    .container
+    {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+        text-align: left;
+    }
+
+    .container .picture 
+    {
+        background: url("./images/image-header-desktop.jpg") no-repeat center/cover;
+        min-width: 40%;
+        border-radius: 0px 10px 10px 0;
+    }
+
+    .overlay
+    {
+        border-radius: 0px 10px 10px 0;
+    }
+
+    .container .card ul 
+    {
+        padding-left: 30px;
+        display: flex;
+    }
+    
+}
+
+@media (min-width: 992px) {
+    body
+    {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+    }
+
+    .container .card:nth-child(2)
+    {
+        padding: 0 30px;
+    }
+    .container .card p 
+    {
+        margin-bottom: 40px;
+    }
 }
