--- a/style.css
+++ b/style.css
@@ -1,171 +1,151 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
-
-:root 
-{
+:root {
     --very-dark-blue: hsl(233, 47%, 7%);
-    --dark-desaturated-blue:hsl(244, 38%, 16%);
+    --dark-desaturated-blue: hsl(244, 38%, 16%);
     --soft-violet: hsl(277, 64%, 61%);
     --white: hsl(0, 0%, 100%);
     --slightly-transparent-white: hsla(0, 0%, 100%, 0.75);
     --slightly-transparent-white: hsla(0, 0%, 100%, 0.6);
-}
-
-*
-{
+  }
+  
+  * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-img 
-{
+  }
+  
+  img {
     max-width: 100%;
-}
-
-ul
-{
+  }
+  
+  ul {
     list-style-type: none;
-}
-
-body
-{
+  }
+  
+  body {
     font-family: "Inter", sans-serif;
     background-color: var(--very-dark-blue);
-}
-
-p 
-{
+  }
+  
+  p {
     font-size: 15px;
     line-height: 1.6;
-}
-
-.container
-{
+  }
+  
+  .container {
     background-color: var(--dark-desaturated-blue);
-    margin: 50px 20px;
-    padding: 0 0px 20px;
-    border-radius: 10px;
     color: var(--white);
+    margin: 50px 20px;
+    padding: 0 0 20px;
+    border-radius: 10px;
     text-align: center;
-}
-
-.picture
-{
-    background: url("/images/image-header-mobile.jpg") no-repeat center/cover;
+  }
+  
+  .container .picture {
+    background: url("./images/image-header-mobile.jpg") no-repeat center/cover;
     height: 400px;
     border-radius: 10px 10px 0 0;
-}
-
-.overlay
-{
-    background: hsla(277, 64%, 61%,0.6);
+  }
+  
+  .container .picture .overlay {
+    background-color: hsla(277, 64%, 61%, 0.7);
     height: 400px;
     border-radius: 10px 10px 0 0;
-}
-
-.container .card h1
-{
+  }
+  
+  .container .card h1 {
     margin: 30px 0 20px;
     padding: 0 20px;
     line-height: 1.3;
     font-family: "Lexend Deca", sans-serif;
-}
-
-.container .card p 
-{
+  }
+  
+  .container .card h1 span {
+    color: hsl(277, 64%, 61%);
+  }
+  
+  .container .card p {
     padding: 0 20px;
     margin-bottom: 30px;
-}
-
-.container .card h1 span 
-{
-    color: hsl(277, 64%, 61%);
-}
-
-.container .card ul li
-{
-    margin-right: 20px;
+  }
+  
+  .container .card ul li {
+    margin-bottom: 20px;
     text-transform: uppercase;
-    font-family: "Inter", sans-serif;
-    font-size: 13px;
-}
-
-.container .card ul li span
-{
+  }
+  
+  .container .card ul li span {
     display: block;
-    margin-bottom: 10px;
     text-transform: lowercase;
     font-weight: 700;
     font-family: "Lexend Deca", sans-serif;
-    font-size: 18px;
-}
-
-.attribution 
-{ 
-    font-size: 11px; 
-    text-align: center; 
+  }
+  
+  .attribution {
+    font-size: 11px;
+    text-align: center;
     color: var(--white);
     padding-bottom: 20px;
-}
-
-.attribution a 
-{ 
-    color: hsl(228, 45%, 44%); 
-}
-
-/****************************
-    RESPONSIVE
-*******************************/
-@media (min-width: 768px) {
-    .container
-    {
-        display: flex;
-        flex-direction: row-reverse;
-        align-items: center;
-        justify-content: center;
-        padding: 0;
-        text-align: left;
+  }
+  
+  .attribution a {
+    color: hsl(228, 45%, 44%);
+  }
+  
+  @media (min-width: 768px) {
+    .container {
+      display: flex;
+      flex-direction: row-reverse;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+      text-align: left;
     }
-
-    .container .picture 
-    {
-        background: url("./images/image-header-desktop.jpg") no-repeat center/cover;
-        min-width: 40%;
-        border-radius: 0px 10px 10px 0;
+  
+    .container .picture {
+      background: url("./images/image-header-desktop.jpg") no-repeat center/cover;
+      min-width: 50%;
+      border-radius: 0 10px 10px 0;
     }
-
-    .overlay
-    {
-        border-radius: 0px 10px 10px 0;
+  
+    .container .picture .overlay {
+      background-color: hsla(277, 64%, 61%, 0.7);
+      height: 400px;
+      border-radius: 0 10px 10px 0;
     }
-
-    .container .card ul 
-    {
-        padding-left: 30px;
-        display: flex;
+  
+    .container .card ul {
+      padding-left: 20px;
+      display: flex;
     }
-    
-}
-
-@media (min-width: 992px) {
-    body
-    {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        min-height: 100vh;
+    .container .card ul li {
+      margin-right: 30px;
+      font-size: 13px;
     }
-
-    .container .card:nth-child(2)
-    {
-        padding: 0 30px;
+  
+    .container .card ul li span {
+      display: block;
+      text-transform: lowercase;
+      font-weight: 700;
+      font-family: "Lexend Deca", sans-serif;
+      font-size: 24px;
+      margin-bottom: 3px;
     }
-    .container .card p 
-    {
-        margin-bottom: 40px;
+  }
+  
+  @media (min-width: 992px) {
+    body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
     }
-}
+  
+    .container .card:nth-child(2) {
+      padding: 0 30px;
+    }
+  
+    .container .card p {
+      margin-bottom: 50px;
+    }
+  }
